UHF-7138: fix scroll position bug in mobile menu

--- a/src/scss/06_components/navigation/global/_mmenu.scss
+++ b/src/scss/06_components/navigation/global/_mmenu.scss
@@ -47,7 +47,7 @@ $-footerlink-target-size: 44px;
   grid-template-columns: 1fr;
   grid-template-rows: 1fr;
   overflow: hidden;
-  overscroll-behavior: none;
+  overscroll-behavior: contain;
 }
 
 .mmenu__panel {
