--- a/src/scss/06_components/forms/__index.scss
+++ b/src/scss/06_components/forms/__index.scss
@@ -1,6 +1,8 @@
 @import 'checkbox';
+@import 'collapsible';
 @import 'form';
 @import 'openid-connect-login-form';
 @import 'user-login-form';
+@import 'react-forms';
 @import 'select';
 @import 'text-input';
