--- a/src/scss/06_components/paragraphs/_liftup-with-image.scss
+++ b/src/scss/06_components/paragraphs/_liftup-with-image.scss
@@ -1,187 +1,74 @@
 $breakpoint-design-image-on-left-right: 830px;
 
-.component--liftup-with-image .component__content {
-  position: relative;
-}
-
-.liftup-with-image__image {
-  picture {
-    width: 100%;
-  }
-
-  img {
-    @include image-defaults($width: 100%, $max-width: null);
-    @include loading-image-background;
-  }
-}
-
-.liftup-with-image__content {
-  padding: $spacing-double;
-}
-
-.liftup-with-image__title {
-  @include font('h3');
-  margin-top: 0;
-}
-
-.liftup-with-image__desc {
-  @include font('body');
-  margin-top: $spacing;
-
-  > *:first-child {
-    margin-top: 0;
-  }
-
-  a {
-    --hdbt-default-link-color: var(--hdbt-color-palette-text--primary);
-  }
-}
-
-.liftup-with-image__content .hds-button {
-  @include font('button');
-}
-
-// Designs with image on the left or right.
 .component--liftup-with-image-img {
-  // max-width: $container-width-xl;
+  --side-padding: 10%;
+  color: var(--hdbt-color-palette-text--primary);
 
-  .liftup-with-image__image,
-  .liftup-with-image__container {
-    display: flex;
+  @include breakpoint($breakpoint-s) {
+    --side-padding: 20%;
   }
 
-  .liftup-with-image__container {
+  @include breakpoint($breakpoint-design-image-on-left-right) {
+    --side-padding: 30%;
+  }
+
+  @include breakpoint($breakpoint-xl) {
+    --side-padding: 20%;
+  }
+
+  .liftup-with-image {
+    align-items: center;
+    display: grid;
+
+    // col1 and col2 overlap
+    grid-template-columns: [col1-start] var(--side-padding) [col2-start] 1fr [col1-end] var(--side-padding) [col2-end];
+
+    // row1 and row2 overlap
+    grid-template-rows: [row1-start] 1fr [row2-start] $spacing-double [row1-end]  min-content [row2-end];
+
     @include breakpoint($breakpoint-design-image-on-left-right) {
-      bottom: 0;
-      left: 0;
-      position: absolute;
-      right: 0;
-      top: 0;
+      // single row
+      grid-template-rows: [row1-start row2-start] 1fr [row1-end row2-end];
     }
   }
 
+  &.component--liftup-with-image-img-on-right .liftup-with-image {
+    --content-area: row2-start / col1-start / row2-end / col1-end;
+    --image-area: row1-start / col2-start / row1-end / col2-end;
+  }
+
+  &.component--liftup-with-image-img-on-left .liftup-with-image {
+    --content-area: row2-start / col2-start / row2-end / col2-end;
+    --image-area: row1-start / col1-start / row1-end / col1-end;
+    --content-margin-right: auto;
+  }
+
   .liftup-with-image__content {
+    background-color: var(--hdbt-color-palette--primary);
+    color: var(--hdbt-color-palette-text--primary);
+    margin-left: var(--content-margin-right);
+    padding: $spacing-double;
+    width: fit-content;
+
     @include breakpoint($breakpoint-design-image-on-left-right) {
       display: flex;
       flex-direction: column;
       justify-content: center;
       min-height: 350px; // According to layouts
-      position: absolute;
-      top: 50%;
-      transform: translateY(-50%);
       width: 460px; // According to layouts
     }
 
     @include breakpoint($breakpoint-xl) {
       min-height: 435px; // According to layouts
     }
-  }
-}
 
-.component--liftup-with-image-img.component--liftup-with-image-img-on-right {
-  .liftup-with-image__image {
-    justify-content: flex-end;
-    padding-left: 10%;
-    padding-right: 0;
-    position: relative;
-    z-index: 0;
-
-    @include breakpoint($breakpoint-s) {
-      padding-left: 20%;
-    }
-
-    @include breakpoint($breakpoint-design-image-on-left-right) {
-      padding-left: 30%;
-    }
-
-    @include breakpoint($breakpoint-xl) {
-      padding-left: 20%;
+    .hds-button {
+      @include font('button');
     }
   }
 
-  .liftup-with-image__container {
-    justify-content: flex-start;
-    margin-right: 10%;
-    margin-top: -#{$spacing-double};
-    position: relative;
-    z-index: 1;
-
-    @include breakpoint($breakpoint-s) {
-      margin-right: 20%;
-    }
-
-    @include breakpoint($breakpoint-design-image-on-left-right) {
-      margin-right: auto;
-      margin-top: 0;
-      position: absolute;
-    }
-  }
-
-  .liftup-with-image__content {
-    @include breakpoint($breakpoint-design-image-on-left-right) {
-      left: 0;
-      right: auto;
-    }
-  }
-}
-
-.component--liftup-with-image-img.component--liftup-with-image-img-on-left {
-  .liftup-with-image__image {
-    justify-content: flex-start;
-    padding-left: 0;
-    padding-right: 10%;
-    position: relative;
-    z-index: 0;
-
-    @include breakpoint($breakpoint-s) {
-      padding-right: 20%;
-    }
-
-    @include breakpoint($breakpoint-design-image-on-left-right) {
-      padding-right: 30%;
-    }
-
-    @include breakpoint($breakpoint-xl) {
-      padding-right: 20%;
-    }
-  }
-
-  .liftup-with-image__container {
-    justify-content: flex-end;
-    margin-left: 10%;
-    margin-top: -#{$spacing-double};
-    position: relative;
-    z-index: 1;
-
-    @include breakpoint($breakpoint-s) {
-      margin-left: 20%;
-    }
-
-    @include breakpoint($breakpoint-design-image-on-left-right) {
-      margin-left: auto;
-      margin-top: 0;
-      position: absolute;
-    }
-  }
-
-  .liftup-with-image__content {
-    @include breakpoint($breakpoint-design-image-on-left-right) {
-      left: auto;
-      right: 0;
-    }
-  }
-}
-
-// Designs with primary background color.
-.component--liftup-with-image-img {
-  color: var(--hdbt-color-palette-text--primary);
-
+  // Designs with primary background color.
   a.link {
-    color: var(--hdbt-color-palette-text--primary);
-  }
-
-  .liftup-with-image__content {
-    background-color: var(--hdbt-color-palette--primary);
     color: var(--hdbt-color-palette-text--primary);
   }
 
@@ -248,12 +135,12 @@ $breakpoint-design-image-on-left-right: 830px;
 .component--liftup-with-image-secondary {
   color: var(--hdbt-color-palette-text--secondary);
 
-  a.link {
+  .liftup-with-image__content {
+    background-color: var(--hdbt-color-palette--secondary);
     color: var(--hdbt-color-palette-text--secondary);
   }
 
-  .liftup-with-image__content {
-    background-color: var(--hdbt-color-palette--secondary);
+  a.link {
     color: var(--hdbt-color-palette-text--secondary);
   }
 
@@ -316,37 +203,96 @@ $breakpoint-design-image-on-left-right: 830px;
   }
 }
 
-// Designs with image as background.
-.no-sidebar .components--upper > .component--liftup-with-image-bg {
-  padding-left: 0;
-  padding-right: 0;
+.liftup-with-image__image {
+  grid-area: var(--image-area);
+
+  picture {
+    width: 100%;
+  }
+
+  img {
+    @include image-defaults($width: 100%, $max-width: null);
+    @include loading-image-background;
+  }
+}
+
+.liftup-with-image__container {
+  grid-area: var(--content-area);
+}
+
+.liftup-with-image__title {
+  @include font('h3');
+  margin-top: 0;
+}
+
+.liftup-with-image__desc {
+  @include font('body');
+  margin-top: $spacing;
+
+  > *:first-child {
+    margin-top: 0;
+  }
+
+  a {
+    --hdbt-default-link-color: var(--hdbt-color-palette-text--primary);
+  }
 }
 
 // Designs with image as background.
+.no-sidebar .components--upper > .component--liftup-with-image-bg.component--liftup-with-image-bg {
+  padding-inline: 0;
+}
+
 .component--liftup-with-image-bg {
   .component__container {
     max-width: none;
   }
 
+  .liftup-with-image {
+    @include breakpoint($breakpoint-l) {
+      @include components-container-max-width-property;
+
+      --image-area: row1-start / col1-start / row1-end / col1-end;
+      display: grid;
+      grid-template-columns: [col1-start] 1fr [col2-start] min(100%, var(--max-width)) [col2-end] 1fr [col1-end];
+      grid-template-rows: [row1-start row2-start] 1fr [row1-end row2-end];
+    }
+  }
+
+  .liftup-with-image__image {
+    @include breakpoint($breakpoint-l) {
+      min-height: 540px; // Minimum height determined with designers.
+      position: relative;
+
+      // stylelint-disable-next-line max-nesting-depth
+      picture {
+        inset: 0;
+        position: absolute;
+      }
+
+      // stylelint-disable-next-line max-nesting-depth
+      img {
+        @include image-defaults($height: 100%, $width: 100%, $max-width: null);
+        object-fit: cover;
+      }
+    }
+  }
+
   .liftup-with-image__container {
-    @include components-container-max-width;
     @include component-side-padding;
-    margin-left: auto;
-    margin-right: auto;
 
     @include breakpoint($breakpoint-l) {
-      align-items: center;
-      display: flex;
-      min-height: 540px; // Minimum height determined with designers.
-      overflow: hidden;
-      position: relative;
-      z-index: 2;
+      align-content: center;
+      display: grid;
+      grid-area: row2-start / col2-start / row2-end / col2-end;
     }
   }
 
   .liftup-with-image__content {
-    padding-left: 0;
-    padding-right: 0;
+    justify-self: end;
+    padding-block-start: $spacing-double;
+    padding-inline: 0;
+    z-index: 1;
 
     @include breakpoint($breakpoint-l) {
       background-color: $color-white;
@@ -355,30 +301,8 @@ $breakpoint-design-image-on-left-right: 830px;
       justify-content: center;
       margin: $spacing-quadruple 0;
       min-height: 350px; // According to layouts
-      padding-left: $spacing-double;
-      padding-right: $spacing-double;
+      padding: $spacing-double;
       width: 460px; // According to layouts
-    }
-  }
-
-  .liftup-with-image__image {
-    @include breakpoint($breakpoint-l) {
-      bottom: 0;
-      height: 100%;
-      left: 0;
-      line-height: 0;
-      min-height: 540px; // Minimum height determined with designers.
-      position: absolute;
-      right: 0;
-      top: 0;
-      z-index: 1;
-    }
-
-    img {
-      @include breakpoint($breakpoint-l) {
-        @include image-defaults($height: 100%, $width: 100%, $max-width: null);
-        object-fit: cover;
-      }
     }
   }
 
@@ -452,7 +376,7 @@ $breakpoint-design-image-on-left-right: 830px;
 .component--liftup-with-image-bg.component--liftup-with-image-img-on-left {
   .liftup-with-image__container {
     @include breakpoint($breakpoint-l) {
-      justify-content: flex-end;
+      justify-self: end;
     }
   }
 }
@@ -460,7 +384,7 @@ $breakpoint-design-image-on-left-right: 830px;
 .component--liftup-with-image-bg.component--liftup-with-image-img-on-right {
   .liftup-with-image__container {
     @include breakpoint($breakpoint-l) {
-      justify-content: flex-start;
+      justify-self: start;
     }
   }
 }
