UHF-7133: UHF-6520: Allow wrapping long alt-text words

--- a/src/scss/06_components/media/_image.scss
+++ b/src/scss/06_components/media/_image.scss
@@ -13,3 +13,7 @@
   @include font('small');
   padding-top: $spacing;
 }
+
+img {
+  overflow-wrap: break-word; // allow reading long alt-text on broken images
+}
