Changes for TPR service search after review

--- a/src/scss/06_components/paragraphs/_service-list.scss
+++ b/src/scss/06_components/paragraphs/_service-list.scss
@@ -84,6 +84,12 @@
       }
     }
   }
+
+  .services-search__results {
+    > .views-row + .views-row {
+      margin-top: $spacing;
+    }
+  }
 }
 
 .component--service-list-search {
