--- a/templates/views/views-view-unformatted--service-list--block-search.html.twig
+++ b/templates/views/views-view-unformatted--service-list--block-search.html.twig
@@ -17,17 +17,9 @@
 #}
 
 <div class="services-search__results">
-  {% if title %}
-    <h3>{{ title }}</h3>
-  {% endif %}
-  {% for row in rows %}
-    {%
-      set row_classes = [
-      default_row_class ? 'views-row',
-    ]
-    %}
-    <div{{ row.attributes.addClass(row_classes) }}>
-      {{- row.content -}}
-    </div>
-  {% endfor %}
+{% for row in rows %}
+  <div class="views-row">
+    {{- row.content -}}
+  </div>
+{% endfor %}
 </div>
