--- a/templates/module/helfi_tpr/tpr-service.html.twig
+++ b/templates/module/helfi_tpr/tpr-service.html.twig
@@ -7,41 +7,8 @@
  */
 #}
 
-{% if view_mode == 'teaser' %}
+{% if view_mode != 'teaser' %}
 
-  <div class="service service--teaser">
-    <a href="{{ url('entity.tpr_service.canonical', { 'tpr_service': entity.id() }) }}" class="service__link">
-      <h3 class="service__title">
-        {{ entity.label }}
-      </h3>
-      {% include '@hdbt/misc/icon.twig' ignore missing with {icon: 'arrow-right'} %}
-    </a>
-  </div>
-
-{% elseif view_mode == 'teaser_search_result' %}
-  <div class="service service--teaser-search-result">
-    <a href="{{ url('entity.tpr_service.canonical', { 'tpr_service': entity.id() }) }}" class="service__link">
-      <h3 class="service__title">
-        {{ entity.label }}
-      </h3>
-      <div class="service__content">
-          <div class="short-desc">
-            {{ content.description }}
-          </div>
-          {% if content.errand_services[0]['#items'] | length > 0 %}
-            <div class="channels">
-              {{ content.errand_services }}
-            </div>
-          {% endif %}
-          <div class="service__read-more">
-            {% include '@hdbt/misc/icon.twig' ignore missing with {icon: 'arrow-right'} %}
-          </div>
-      </div>
-
-    </a>
-  </div>
-
-{% else %}
   <article class="service service--full">
 
     {% embed "@hdbt/misc/lead-in.twig" with { content: content.description_summary } %}{% endembed %}
@@ -67,4 +34,16 @@
     {% endif %}
 
   </article>
+
+{% elseif view_mode == 'teaser' %}
+
+  <div class="service service--teaser">
+    <a href="{{ url('entity.tpr_service.canonical', { 'tpr_service': entity.id() }) }}" class="service__link">
+      <h3 class="service__title">
+        {{ entity.label }}
+      </h3>
+      {% include '@hdbt/misc/icon.twig' ignore missing with {icon: 'arrow-right'} %}
+    </a>
+  </div>
+
 {% endif %}
