--- a/templates/paragraphs/paragraph--service-list-search.html.twig
+++ b/templates/paragraphs/paragraph--service-list-search.html.twig
@@ -8,7 +8,7 @@
   %}
 
     {% block component_content %}
-      {{ drupal_view('service_list', 'block_1', services_list_views_argument) }}
+      {{ drupal_view('service_list', 'block_search', services_list_views_argument) }}
 
     {% endblock component_content %}
   {% endembed %}
