--- a/templates/views/views-view--service-list--block-search.html.twig
+++ b/templates/views/views-view--service-list--block-search.html.twig
@@ -33,8 +33,8 @@
 {%
   set classes = [
   'views',
-  'views--' ~ id|clean_class,
-  'views--' ~ display_id|clean_class,
+  'views--service-list',
+  'views--service-list--block-search',
   dom_id ? 'js-view-dom-id-' ~ dom_id,
 ]
 %}
