UHF-7791: UHF-7791: modify api urls and see all button.

--- a/src/scss/06_components/paragraphs/_event-list.scss
+++ b/src/scss/06_components/paragraphs/_event-list.scss
@@ -76,3 +76,7 @@ $tag-vertical-padding: 5px;
   margin-bottom: $spacing-triple;
   margin-top: $spacing;
 }
+
+.event-list__see-all-button {
+  text-align: center;
+}
