UHF-7791: UHF-7791: start using HDS loading spinner.

--- a/src/scss/06_components/paragraphs/_event-list.scss
+++ b/src/scss/06_components/paragraphs/_event-list.scss
@@ -123,3 +123,7 @@ $tag-vertical-padding: 5px;
   margin: 32px auto 0;
   text-align: center;
 }
+
+.event-list__loading-spinner > div {
+  margin: 0 auto;
+}
