--- a/templates/module/helfi_tpr/tpr-content-liftup.html.twig
+++ b/templates/module/helfi_tpr/tpr-content-liftup.html.twig
@@ -1,2 +1,2 @@
 {# Remove this file after siteimprove clears its removal #}
-{% include '@hdbt/module/helfi_tpr/tpr-unit--wide-teaser.html.twig' with { tpr_content_liftup_class = 'tpr-content-liftup-html-twig' }%}
+{% include '@hdbt/module/helfi_tpr/tpr-unit--wide-teaser.html.twig' with { tpr_content_liftup_class: 'tpr-content-liftup-html-twig' }%}
