Fixed the theme path in page templates.

--- a/templates/layout/maintenance-page.html.twig
+++ b/templates/layout/maintenance-page.html.twig
@@ -40,7 +40,7 @@
       </main>
     </div>
     <div class="maintenance-page__illustration-container">
-      <img src="/themes/contrib/hdbt/src/images/illustration_maintenance_mode_page.svg" alt="" class="maintenance-page__illustration" width="379" height="566" />
+      <img src="{{ theme_path }}/src/images/illustration_maintenance_mode_page.svg" alt="" class="maintenance-page__illustration" width="379" height="566" />
     </div>
   {% endblock container_content %}
 {% endembed %}
