--- a/templates/layout/page--401.html.twig
+++ b/templates/layout/page--401.html.twig
@@ -31,7 +31,7 @@
           </div>
         </div>
         <div class="error-page__illustration-container">
-          <img src="/themes/contrib/hdbt/src/images/illustration_error_page_403_401.svg" alt="" class="error-page__illustration" width="379" height="566" />
+          <img src="{{ theme_path }}/src/images/illustration_error_page_403_401.svg" alt="" class="error-page__illustration" width="379" height="566" />
         </div>
       {% endblock container_content %}
     {% endembed %}
