--- a/templates/layout/page--404.html.twig
+++ b/templates/layout/page--404.html.twig
@@ -24,7 +24,7 @@
           {{ link(feedback_link_title, error_page_feedback_link, link_attributes) }}
         </div>
         <div class="error-page__illustration-container">
-          <img src="/themes/contrib/hdbt/src/images/illustration_error_page_404.svg" alt="" class="error-page__illustration" width="379" height="566" />
+          <img src="{{ theme_path }}/src/images/illustration_error_page_404.svg" alt="" class="error-page__illustration" width="379" height="566" />
         </div>
       {% endblock container_content %}
     {% endembed %}
