--- a/templates/layout/page--user--login.html.twig
+++ b/templates/layout/page--user--login.html.twig
@@ -9,7 +9,7 @@
           {{ page.content|without(page_title_block) }}
         </div>
         <div class="user-login-page__illustration-container">
-          <img src="/themes/contrib/hdbt/src/images/illustration_user_login_page.svg" alt="" class="user-login-page__illustration"/>
+          <img src="{{ theme_path }}/src/images/illustration_user_login_page.svg" alt="" class="user-login-page__illustration"/>
         </div>
       {% endblock container_content %}
     {% endembed %}
