--- a/templates/layout/page.html.twig
+++ b/templates/layout/page.html.twig
@@ -46,6 +46,7 @@
 
 {% else %}
 
+  <div id="profile" class="nav-toggle-target"></div>
   {# This checkbox handles opening and closing mobile menu #}
   <input type="checkbox" id="cssmenu-toggle-checkbox" class="cssmenu-toggle-checkbox js-cssmenu-toggle-checkbox" role="button" aria-labelledby="cssmenu-toggle">
 {% endif %}
