--- a/templates/layout/page.html.twig
+++ b/templates/layout/page.html.twig
@@ -41,14 +41,22 @@
   These must be on top and at root.
   #}
   <div id="menu" class="nav-toggle-target"></div>
-  <div id="search" class="nav-toggle-target"></div>
 {% else %}
   {# This checkbox handles opening and closing mobile menu #}
   <input type="checkbox" id="cssmenu-toggle-checkbox" class="cssmenu-toggle-checkbox js-cssmenu-toggle-checkbox" role="button" aria-labelledby="cssmenu-toggle">
 {% endif %}
 
-<div id="otherlangs" class="nav-toggle-target"></div>
-<div id="profile" class="nav-toggle-target"></div>
+{% if use_search_block %}
+  <div id="search" class="nav-toggle-target"></div>
+{% endif %}
+
+{% if use_otherlangs_block %}
+  <div id="otherlangs" class="nav-toggle-target"></div>
+{% endif %}
+
+{% if use_profile_block %}
+  <div id="profile" class="nav-toggle-target"></div>
+{% endif %}
 
 <div{{ create_attribute( publishAttribute ).addClass(page_classes) }}>
   {% if page.header_top or page.header_bottom or page.header_branding %}
