--- a/src/scss/07_utilities/_states.scss
+++ b/src/scss/07_utilities/_states.scss
@@ -1,3 +1,14 @@
 .is-hidden {
   display: none;
 }
+
+// Override Drupals visually-hidden class with a bit more comprehensive class.
+.visually-hidden:not(:focus):not(:active) {
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
