--- a/templates/misc/icon.twig
+++ b/templates/misc/icon.twig
@@ -1,1 +1,7 @@
-<span class="hel-icon hel-icon--{{ icon }} {{ class }}" {% if label %} aria-label="{{ label }}" {% else %} aria-hidden="true" {% endif %}></span>
+{% set icon_labelled_by = "hdbt-icon--" ~ random() %}
+
+<span class="hel-icon hel-icon--{{ icon }} {{ class }}" role="img" {% if label %} aria-labelledby="{{ icon_labelled_by }}" {% else %} aria-hidden="true" {% endif %}>
+  {% if label %}
+    <span class="visually-hidden" id="{{ icon_labelled_by }}">{{ label }}</span>
+  {% endif %}
+</span>
