LOM-266: LOM-266 Removed commenting that was used for development purposes around page.messages, added commenting on menu.js changes

--- a/templates/layout/page.html.twig
+++ b/templates/layout/page.html.twig
@@ -138,9 +138,9 @@
 
     <a id="main-content" tabindex="-1"></a>
 
-{#    {% if page.messages %}#}
-{#      {{ page.messages }}#}
-{#    {% endif %}#}
+    {% if page.messages %}
+      {{ page.messages }}
+    {% endif %}
 
     {% block page_before_content %}
       {% if page.before_content %}
