LOM-266: LOM-266 Fixed issues with styles discovered in PR review

--- a/src/scss/06_components/navigation/_branding-navigation.scss
+++ b/src/scss/06_components/navigation/_branding-navigation.scss
@@ -31,7 +31,7 @@ $-branding-icon-size-desktop: $spacing-double;
   @include breakpoint($breakpoint-l) {
     grid-template-areas:
       '. logo . lang brand search toggle profile .'
-      'langmenu langmenu langmenu langmenu langmenu . . . .'
+      'langmenu langmenu langmenu langmenu . . . . .'
       'menu menu menu menu menu menu menu menu menu';
   }
 
