--- a/templates/module/helfi_platform_config/profile-block.html.twig
+++ b/templates/module/helfi_platform_config/profile-block.html.twig
@@ -12,6 +12,7 @@
     controls: dropdown_id,
     anchor_target: '#profile',
     js_target: 'js-profile-button',
+    modifier_suffix: 'profile',
 
     open_label: display_name,
     open_screenreader: 'You are logged in as '|t ~ display_name ~ '. ' ~ 'Open profile information menu'|t({}, {'context': 'Profile information-menu open button text for screen readers'}),
